--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="situation" data-label="СИТУАЦИЯ"><b>♡</b></td>
+                    <td class="situation" data-label="СИТУАЦИЯ"> Пользователь пишет по <b><em>свежему кейсу</em></b> или отправляет <b><em>скриншот/детализацию</em></b>.</td>
                     <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
                         Благодарим за информацию! Взяли обращение в работу.
                     </td>
@@ -29,11 +29,11 @@
                 <tr>
                     <td class="situation" data-label="СИТУАЦИЯ" colspan="5"><b>АКТИВНЫЕ ВЫПЛАТЫ</b></td>
                 </tr>
-                <td class="situation" data-label="СИТУАЦИЯ">Клиент <b><em>повторно обращается по активной выплате</em></b>.</td>
-                <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
+                    <td class="situation" data-label="СИТУАЦИЯ">Клиент <b><em>повторно обращается по активной выплате</em></b>.</td>
+                    <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
                     Ваша выплата все еще активна, пожалуйста, ожидайте поступление в
                     течение 15 минут.
-                </td>
+                    </td>
                 </tr>
                 <tr>
                     <td class="situation" data-label="СИТУАЦИЯ">Нужно ли <b><em>оставаться на сайте, пока выплата активна</em></b>?</td>
@@ -78,15 +78,15 @@
                     <td class="situation" data-label="СИТУАЦИЯ" colspan="2"><b>ВЫПИСКА</b></td>
                 </tr>
                 <tr>
-                  <td class="situation" data-label="СИТУАЦИЯ">Клиент пишет, что <b><em>получил средства по выплате с «Мнимой ошибкой»</em></b>.</td>
-                  <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
-                      Даже если Вы считаете, что средства поступили по этой выплате, пришлите выписку, чтобы мы смогли проверить вывод и закрыть данный вопрос.
-                  </td>
-                </tr>
-                <tr>
                     <td class="situation" data-label="СИТУАЦИЯ">Клиент <b><em>прислал выписку</em></b> с <b><em> некорректными датами</em></b>.</td>
                     <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
                         Для решения вопроса нам необходима выписка с <b><em>число</em></b> по <b><em>число</em></b>, так как только в этом случае будут отражены все нужные транзакции. Без нее мы не сможем Вам помочь!
+                    </td>
+                </tr>
+                <tr>
+                    <td class="situation" data-label="СИТУАЦИЯ">Клиент пишет, что <b><em>получил средства по выплате с «Мнимой ошибкой»</em></b>.</td>
+                    <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
+                        Даже если Вы считаете, что средства поступили по этой выплате, пришлите выписку, чтобы мы смогли проверить вывод и закрыть данный вопрос.
                     </td>
                 </tr>
                 <tr>
@@ -181,7 +181,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="situation" data-label="СИТУАЦИЯ"><b>♡</b></td>
+                    <td class="situation" data-label="СИТУАЦИЯ"><b><em>Прощание </em></b>с клиентом.</td>
                     <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
                         Спасибо за то, что воспользовались нашим сервисом! Хорошего дня!
                     </td>
