--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="situation" data-label="СИТУАЦИЯ"> Пользователь пишет по <b><em>свежему кейсу</em></b> или отправляет <b><em>скриншот/детализацию</em></b>.</td>
+                    <td class="situation" data-label="СИТУАЦИЯ"> Клиент пишет по <b><em>свежему кейсу</em></b> или отправляет <b><em>скриншот/детализацию</em></b>.</td>
                     <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
                         Благодарим за информацию! Взяли обращение в работу.
                     </td>
                 </tr>
                 <tr>
-                    <td class="situation" data-label="СИТУАЦИЯ" colspan="5"><b>АКТИВНЫЕ ВЫПЛАТЫ</b></td>
+                    <td class="situation" data-label="СИТУАЦИЯ" colspan="3"><b>АКТИВНЫЕ ВЫПЛАТЫ</b></td>
                 </tr>
                     <td class="situation" data-label="СИТУАЦИЯ">Клиент <b><em>повторно обращается по активной выплате</em></b>.</td>
                     <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
-                    Ваша выплата все еще активна, пожалуйста, ожидайте поступление в
-                    течение 15 минут.
+                        Ваша выплата все еще активна, пожалуйста, ожидайте поступление в
+                        течение 15 минут.
                     </td>
                 </tr>
                 <tr>
@@ -135,13 +135,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="situation" data-label="СИТУАЦИЯ">Как мне найти <b><em>чат</em></b>?</td>
+                    <td class="situation" data-label="СИТУАЦИЯ">Как найти <b><em>чат</em></b>?</td>
                     <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
                         Начните создавать заявку на пополнение аккаунта или вывод средств. Затем выберите нас как способ, и внизу экрана будет ссылка на раздел "история операций по TranzexPay" - там будет чат с нами.
                     </td>
                 </tr>
                 <tr>
-                    <td class="situation" data-label="СИТУАЦИЯ">Как мне найти <b><em>заявку на вывод/депозит</em></b>?</td>
+                    <td class="situation" data-label="СИТУАЦИЯ">Как найти <b><em>заявку на вывод/депозит</em></b>?</td>
                     <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
                         Информацию о всех транзакциях Вы можете найти на сайте баланс которого Вы пополняете.
                     </td>
@@ -183,7 +183,7 @@
                 <tr>
                     <td class="situation" data-label="СИТУАЦИЯ"><b><em>Прощание </em></b>с клиентом.</td>
                     <td class="clickable" data-label="ШАБЛОН" onclick="copyToClipboard(this)">
-                        Спасибо за то, что воспользовались нашим сервисом! Хорошего дня!
+                        Спасибо, что обратились к нам! Всего наилучшего!
                     </td>
                 </tr>
             </tbody>
